# ninja-shared-library

./: CMakeLists.txt
src/: manifest_parser.h  parser.h
